all changes ended

--- a/index.html
+++ b/index.html
@@ -207,11 +207,11 @@
           <h1 class="text-3xl">Client Question</h1>
           <p>That is one of the most asked questions I hear when going to hockey game by fans. </p>
         </div>
-        <div class="hero min-h-screen bg-base-200 my-10">
+        <div class="hero min-h-screen my-10">
           <div class="hero-content flex-col lg:flex-row">
             <img src="Images/11.png" class="max-w-sm rounded-lg shadow-2xl" />
             <div>
-              <div class="collapse collapse-plus bg-base-200">
+              <div class="collapse collapse-plus">
                 <input type="radio" name="my-accordion-3" checked="checked" /> 
                 <div class="collapse-title text-xl font-medium">
                   Our Equipment
@@ -220,7 +220,8 @@
                   <p>Your hockey stick is like your weapon on the battlefield.</p>
                 </div>
               </div>
-              <div class="collapse collapse-plus bg-base-200">
+              <hr>
+              <div class="collapse collapse-plus">
                 <input type="radio" name="my-accordion-3" /> 
                 <div class="collapse-title text-xl font-medium">
                   Hockey Training
@@ -229,7 +230,8 @@
                   <p>Hockey training programs designed to help hockey players improve their game</p>
                 </div>
               </div>
-              <div class="collapse collapse-plus bg-base-200">
+              <hr>
+              <div class="collapse collapse-plus">
                 <input type="radio" name="my-accordion-3" /> 
                 <div class="collapse-title text-xl font-medium">
                   Private Lessons
@@ -238,7 +240,8 @@
                   <p>Individual lessons consist of 1-4 players that skate for a 30-minute session each week.</p>
                 </div>
               </div>
-              <div class="collapse collapse-plus bg-base-200">
+              <hr>
+              <div class="collapse collapse-plus">
                 <input type="radio" name="my-accordion-3" /> 
                 <div class="collapse-title text-xl font-medium">
                 Ski Touring
@@ -247,7 +250,8 @@
                   <p>Ski touring is skiing in the backcountry on unmarked or unpatrolled areas</p>
                 </div>
               </div>
-              <div class="collapse collapse-plus bg-base-200">
+              <hr>
+              <div class="collapse collapse-plus">
                 <input type="radio" name="my-accordion-3" /> 
                 <div class="collapse-title text-xl font-medium">
                   Booking
@@ -256,7 +260,8 @@
                   <p>Choose From a Wide Range of Properties Which Booking.</p>
                 </div>
               </div>
-              <div class="collapse collapse-plus bg-base-200">
+              <hr>
+              <div class="collapse collapse-plus">
                 <input type="radio" name="my-accordion-3" /> 
                 <div class="collapse-title text-xl font-medium">
                   Pricing
@@ -313,8 +318,8 @@
             <h3>Message</h3>
             <p class="bg-base-200 p-4">Write your message</p>
           </div>
-          <div>
-            <a class="btn btn-error my-5">Send message</a>
+          <div class="my-5">
+            <input type="text" placeholder="Send message" class="p-4 bg-error text-black">
           </div>
         </div>
         </div>
