footer section ended

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 </nav>
 <div class="relative mx-auto lg:px-24 px-8">
   <img src="Images/1.png" alt="">
-  <div class="bg-black absolute bottom-10 leaft-20 w-65 lg: px-5 px2 text-white ">
+  <div class="bg-black absolute bottom-10 leaft-20 w-65 lg: px-5 px-2 text-white ">
     <h1 class="text-2xl">Meet all heroes from the field</h1>
     <p>The FIH Men's Hockey World Cup is being held every four years since its inception in 1971. </p>
   </div>
@@ -337,9 +337,8 @@
         <nav>
           <h6 class="footer-title text-white">Get In Touch</h6> 
           <p>If you get in touch with ous, you <br> contact us by writing or phoning . </p>
-          <a class="link link-hover">Design</a>
-          <a class="link link-hover">Marketing</a>
-          <a class="link link-hover">Advertisement</a>
+          <a class="link link-hover">hockeys@support.com</a>
+          <a class="link link-hover">(+62)123-321-543</a>
         </nav> 
         <nav>
           <h6 class="footer-title text-white">Company</h6> 
